Matrix structure redesigned. Controller refactored. Reader refactored.

--- a/CycleDetector_CPUONLY/CycleDetector_CPUONLY/CycleDetector_CPUONLY.vcxproj
+++ b/CycleDetector_CPUONLY/CycleDetector_CPUONLY/CycleDetector_CPUONLY.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Analyzer.cpp" />
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="GraphReader.cpp" />
   </ItemGroup>
