--- a/CycleDetector_CPUONLY/CycleDetector_CPUONLY/CycleDetector_CPUONLY.vcxproj.filters
+++ b/CycleDetector_CPUONLY/CycleDetector_CPUONLY/CycleDetector_CPUONLY.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClCompile Include="GraphReader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Analyzer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphReader.h">
