Analyzer added. Printing fix.

--- a/CycleDetector_CPUONLY/CycleDetector_CPUONLY/CycleDetector_CPUONLY.vcxproj
+++ b/CycleDetector_CPUONLY/CycleDetector_CPUONLY/CycleDetector_CPUONLY.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="GraphReader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Analyzer.h" />
     <ClInclude Include="Controller.h" />
     <ClInclude Include="GraphReader.h" />
   </ItemGroup>
