--- a/CycleDetector_CPUONLY/CycleDetector_CPUONLY/CycleDetector_CPUONLY.vcxproj.filters
+++ b/CycleDetector_CPUONLY/CycleDetector_CPUONLY/CycleDetector_CPUONLY.vcxproj.filters
@@ -28,5 +28,8 @@
     <ClInclude Include="Controller.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Analyzer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
