--- a/CycleDetector/CycleDetector/CycleDetector.vcxproj.filters
+++ b/CycleDetector/CycleDetector/CycleDetector.vcxproj.filters
@@ -48,5 +48,11 @@
     <ClInclude Include="cudaAnalyzer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PathsContainer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
