--- a/GraphAnalyzer/Graph IO Utilities/Graph IO Utilities.vcxproj.filters
+++ b/GraphAnalyzer/Graph IO Utilities/Graph IO Utilities.vcxproj.filters
@@ -17,7 +17,7 @@
     <ClCompile Include="GraphReader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="controller.cpp">
+    <ClCompile Include="GraphGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
